test/expected/explain_fo_exclam__b.out
explain friend bool operator!()
                  ^
19: error: member operators can not be "friend"
